--- a/src/assets/style/cmps/app/board/table-view/_T_GroupHeader.scss
+++ b/src/assets/style/cmps/app/board/table-view/_T_GroupHeader.scss
@@ -78,8 +78,10 @@
 
     &:hover,
     &.menu-in-focus {
-        .menu-wraper {
-            opacity: 1;
+        .menu-container{
+            .menu-wraper {
+                opacity: 1;
+            }
         }
 
     }
